** Fixed layout bug in gamelibrary publications viewing that caused publications with long name to render incorrectly on small mobile devices

--- a/webapp/src/main/webapp/resources/novus/scss/gamelibrary.scss
+++ b/webapp/src/main/webapp/resources/novus/scss/gamelibrary.scss
@@ -224,17 +224,22 @@ h3 a {
 
 @media screen and (max-width: 360px) {
   .gamelibrary-publication h3 {
-    max-width: 150px;
+    max-width: 50%;
     word-wrap: break-word;
   }
   
   .gamelibrary-publication .gamelibrary-publication-tags {
-    max-width: 150px;
+    max-width: 50%;
     word-wrap: break-word;
+  }
+
+  .gamelibrary-publication-image-link {
+    max-width: 50%;
+    @include box-sizing(border-box);
   }
   
   .gamelibrary-publication-image-link img {
-    max-width: 150px;
+    max-width: 100%;
   }
   
 }
